// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deployDefaultTokens handles FAILED transactions 1`] = `
[
  [
    {
      "operation": "DEPLOY_NEAR",
      "silo_id": 1,
      "status": "PENDING",
      "target": null,
      "transaction_hash": "mock_tx_hash_Near",
    },
  ],
  [
    {
      "operation": "DEPLOY_USDT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_tx_hash_Usdt",
    },
  ],
  [
    {
      "operation": "DEPLOY_USDC",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_tx_hash_Usdc",
    },
  ],
  [
    {
      "operation": "DEPLOY_ETH",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_tx_hash_[object Object]",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
]
`;

exports[`deployDefaultTokens performs the transactions to deploy the tokens 1`] = `
[
  [
    {
      "operation": "DEPLOY_NEAR",
      "silo_id": 1,
      "status": "PENDING",
      "target": null,
      "transaction_hash": "mock_tx_hash_Near",
    },
  ],
  [
    {
      "operation": "DEPLOY_USDT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_tx_hash_Usdt",
    },
  ],
  [
    {
      "operation": "DEPLOY_USDC",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_tx_hash_Usdc",
    },
  ],
  [
    {
      "operation": "DEPLOY_ETH",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_tx_hash_[object Object]",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
]
`;

exports[`deployDefaultTokens skips a single token with an already SUCCESSFUL transaction 1`] = `
[
  [
    {
      "operation": "DEPLOY_USDT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_tx_hash_Usdt",
    },
  ],
  [
    {
      "operation": "DEPLOY_USDC",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_tx_hash_Usdc",
    },
  ],
  [
    {
      "operation": "DEPLOY_ETH",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_tx_hash_[object Object]",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
]
`;

exports[`deployDefaultTokens skips if a token contract was already deployed 1`] = `
[
  [
    {
      "operation": "DEPLOY_NEAR",
      "silo_id": 1,
      "status": "PENDING",
      "target": null,
      "transaction_hash": "mock_tx_hash_Near",
    },
  ],
  [
    {
      "operation": "DEPLOY_USDC",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_tx_hash_Usdc",
    },
  ],
  [
    {
      "operation": "DEPLOY_ETH",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_tx_hash_[object Object]",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "usdt.tether-token.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "17208628f84f5d6ad33f0da3bbbeb27ffcb398eac501a31bd6ad2011e36133a1",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
  [
    {
      "operation": "STORAGE_DEPOSIT",
      "silo_id": 1,
      "status": "PENDING",
      "target": "eth.bridge.near",
      "transaction_hash": "mock_storage_deposit_tx_hash",
    },
  ],
]
`;
